Fixes some bugs in previous Migrations due to use of deleted models
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1523 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -338,7 +338,7 @@ eng:
       _purchase_order_form:
         #>infos: 'Renseignez les caractéristiques de l''achat '
       purchase_order_line_create:
-        #>title: 'Ajouter un produit à la commande'
+        #>title: 'Ajouter un produit à la commande : {{number}}'
       purchase_order_line_update:
         #>title: 'Modifier une ligne de la commande'
       purchase_order_lines:
@@ -364,17 +364,17 @@ eng:
           #>other: '{{count}} achats'
           #>zero: 'Aucun achat'
         #>title: 'Achats'
+      purchase_payment_create:
+        #>title: 'Ajout d''un règlement d''achat'
+      _purchase_payment_form:
+        #>embankable: 'Complément d''information'
+        #>title: 'Renseignez les conditions du règlement'
       purchase_payment_mode_create:
         #>title: 'Ajouter un nouveau mode de règlement d''achat'
-      _quick_line:
-        #>discount: 'Réduction (en %)'
-        #>from: 'Du numéro'
-        #>location: 'Lieu de stockage'
-        #>product: 'Produit'
-        #>quantity: 'Quantité'
-        #>title: 'Saisie rapide'
-        #>to: 'au'
-        #>valid: 'Valider'
+      purchase_payment_part_create:
+        #>title: 'Régler l''achat avec un règlement'
+      purchase_payments:
+        #>title: 'Règlements d''achat'
       sale_order:
         #>deliveries: 'Livraisons'
         #>general_informations: 'Informations générales'
@@ -425,6 +425,15 @@ eng:
         #>contact: 'à l''adresse'
         #>from_date: 'Du '
         #>to_date: 'Au '
+      _sale_order_line_row_form:
+        #>discount: 'Réduction (en %)'
+        #>from: 'Du numéro'
+        #>location: 'Lieu de stockage'
+        #>product: 'Produit'
+        #>quantity: 'Quantité'
+        #>title: 'Saisie rapide'
+        #>to: 'au'
+        #>valid: 'Valider'
       _sale_order_line_stocks:
         #>line_stock: 'Lieu de stockage: {{location}}, quantité disponible: {{virtual_q}}'
       _sale_order_line_tracking:
@@ -465,10 +474,8 @@ eng:
         #>title: 'Types de ventes'
       sale_order_print:
       sale_order_summary:
-        #>amount_wt: 'Montant TTC'
-        #>balance_amount: 'Solde du client'
+        #>add_payment: 'Ajouter un règlement'
         #>client_balance: 'Solde du client'
-        #>close_sale: 'Clôturer la vente'
         #>financial_state: 'État de la vente'
         #>invoice: 'Facture'
         #>invoiced_amount: 'Montant facturé'
@@ -508,7 +515,7 @@ eng:
       sale_payment_create:
         #>title: 'Ajout d''un nouveau règlement'
       _sale_payment_form:
-        #>check: 'Pour les règlements de type chèque'
+        #>embankable: 'Complément d''information'
         #>title: 'Renseignez les conditions du règlement'
       sale_payment_mode_create:
         #>title: 'Ajouter un nouveau mode de règlement de vente'
