--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -418,16 +418,6 @@ fra:
       direction_label:
         in: 'Intrant'
         out: 'Sortant'
-    payment_mode:
-      directions:
-        given: 'Pour les achats'
-        received: 'Pour les ventes'
-      natures:
-        card: 'Carte bancaire'
-        cash: 'Espèces'
-        check: 'Chèque'
-        other: 'Autre'
-        transfer: 'Virement'
     price:
       label: '{{product}} / {{amount}} {{currency}}'
       no_range: 'Pas d''intervalle'
@@ -459,6 +449,8 @@ fra:
       purchase: 'Achat'
     purchase_order_line:
       tracking: 'N°Lot : {{serial}}'
+    purchase_payment:
+      label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
     sale_order:
       label:
         estimate: 'Devis N°{{number}}'
@@ -482,13 +474,8 @@ fra:
       location_can_not_transfer_product: 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}} '
       reduction_on: 'Remise de {{percent}}% sur : {{product}}'
       tracking: 'N°Lot : {{serial}}'
-    sale_order_nature:
-      payment_types:
-        card: 'Carte bancaire'
-        cash: 'Espèce'
-        check: 'Chèque bancaire'
-        none: 'Aucun'
-        transfer: 'Virement'
+    sale_payment:
+      label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{payer}}'
     sequence:
       periods:
         cweek: 'Semaine'
