--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -354,27 +354,26 @@ fra:
       purchase_order_summary:
         payments: 'Règlements'
         products: 'Produits de la commande'
-        sale_payment_part_create: 'Ajouter un règlement'
+        sale_payment_part_create: 'Ajouter un règlement' #!
         title: 'Règlements'
+        #>purchase_payment_part_create: # Potentially missing translation
       purchase_orders:
         nb_purchases: 
           one: '1 achat'
           other: '{{count}} achats'
           zero: 'Aucun achat'
         title: 'Achats'
-      purchase_payments:
-        title: 'Règlements d''achat'
+      purchase_payment_create:
+        title: 'Ajout d''un règlement d''achat'
+      _purchase_payment_form:
+        embankable: 'Complément d''information'
+        title: 'Renseignez les conditions du règlement'
       purchase_payment_mode_create:
         title: 'Ajouter un nouveau mode de règlement d''achat'
-      _quick_line:
-        discount: 'Réduction (en %)'
-        from: 'Du numéro' #!
-        location: 'Lieu de stockage'
-        product: 'Produit'
-        quantity: 'Quantité'
-        title: 'Saisie rapide'
-        to: 'au' #!
-        valid: 'Valider'
+      purchase_payment_part_create:
+        title: 'Régler l''achat avec un règlement'
+      purchase_payments:
+        title: 'Règlements d''achat'
       sale_order:
         deliveries: 'Livraisons'
         general_informations: 'Informations générales'
@@ -427,6 +426,15 @@ fra:
         to_date: 'Au '
         #>from: # Potentially missing translation
         #>to: # Potentially missing translation
+      _sale_order_line_row_form:
+        discount: 'Réduction (en %)'
+        from: 'Du numéro' #!
+        location: 'Lieu de stockage'
+        product: 'Produit'
+        quantity: 'Quantité'
+        title: 'Saisie rapide'
+        to: 'au' #!
+        valid: 'Valider'
       _sale_order_line_stocks:
         line_stock: 'Lieu de stockage: {{location}}, quantité disponible: {{virtual_q}}'
       _sale_order_line_tracking:
@@ -448,7 +456,7 @@ fra:
         sale_order_deliveries: 'Livraisons' #!
         sale_order_invoice: 'Facturer directement tout le devis'
         sale_order_line_create: 'Ajouter un produit au devis (Mode complet)'
-        sale_order_print: 'Imprimer le devis'
+        sale_order_print: 'Imprimer le devis' #!
         sale_order_update: 'Modifier les informations du devis'
         subscriptions: 'Abonnements'
         title: 'Sélection des produits pour le devis {{sale_order}} de : {{client}}'
@@ -466,10 +474,8 @@ fra:
         sale_order_nature_create: 'Créer un nouveau type de vente'
         title: 'Types de ventes'
       sale_order_summary:
-        amount_wt: 'Montant TTC' #!
-        balance_amount: 'Solde du client' #!
+        add_payment: 'Ajouter un règlement' #!
         client_balance: 'Solde du client' #!
-        close_sale: 'Clôturer la vente' #!
         financial_state: 'État de la vente'
         invoice: 'Facture'
         invoiced_amount: 'Montant facturé' #!
@@ -506,10 +512,14 @@ fra:
         sale_orders: 'Ventes payées grâce à ce règlement'
         sale_payment_update: 'Modifier le règlement'
         title: 'Règlement n°{{number}} de {{entity}}'
+      purchase_payment:
+        purchase_orders: 'Ventes payées grâce à ce règlement'
+        purchase_payment_update: 'Modifier le règlement'
+        title: 'Règlement d''achat n°{{number}} pour {{payee}}'
       sale_payment_create:
         title: 'Ajout d''un nouveau règlement'
       _sale_payment_form:
-        check: 'Pour les règlements de type chèque'
+        embankable: 'Complément d''information'
         title: 'Renseignez les conditions du règlement'
       sale_payment_mode_create:
         title: 'Ajouter un nouveau mode de règlement de vente'
@@ -525,10 +535,10 @@ fra:
         downpayment: 'Acompte' #!
         existing_part: 'Utiliser un règlement non affecté' #!
         new: 'Créer un nouveau règlement' #!
-        new_payment: 'Enregistrer un nouveau règlement'
-        payment_label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{entity}}'
-        select_existing_payment: 'Sélectionner un règlement existant'
-        unused_payment: 'Règlement à utiliser'
+        new_payment: 'Enregistrer un nouveau règlement' #!
+        payment_label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{entity}}' #!
+        select_existing_payment: 'Sélectionner un règlement existant' #!
+        unused_payment: 'Règlement à utiliser' #!
       sale_payment_update:
         title: 'Modification du règlement n°{{number}}'
       sale_payments:
