--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -11,8 +11,6 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>entries: 'Écritures'
         id: '唯一の番号'
         #>is_debit: 'Débit'
@@ -89,7 +87,7 @@ jpn:
         #>debit: 'Débit'
         #>entries: 'Écritures'
         id: '唯一の番号'
-        #>intermediate_entries: '(((INTERMEDIATE_ENTRIES)))'
+        #>journal_entries: 'Écritures'
         lock_version: '修正の番号'
         #>number: 'Numéro'
         #>started_on: 'Du'
@@ -131,7 +129,6 @@ jpn:
         #>nature_label: 'Nature'
         #>number: 'Numéro de compte bancaire'
         #>payment_modes: 'Modes de réglement'
-        #>statements: '(((STATEMENTS)))'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
@@ -141,14 +138,13 @@ jpn:
         #>areas: 'Zones postales'
         #>available_prices: 'Prix disponibles'
         #>available_products: 'Produits disponibles'
-        #>bank_journal: 'Journal de banque'
-        #>bank_journals: '(((BANK_JOURNALS)))'
+        #>bank_journals: 'Journaux de banque'
         #>bank_statements: 'Relevés de compte bancaire'
         #>banks_accounts: 'Comptes comptables de banque'
         #>born_on: 'Créée le'
-        #>cash_journals: '(((CASH_JOURNALS)))'
-        #>cashes: 'Comptes bancaires'
-        #>cashes_accounts: '(((CASHES_ACCOUNTS)))'
+        #>cash_journals: 'Journaux de caisse'
+        #>cashes: 'Comptes de trésorerie'
+        #>cashes_accounts: 'Comptes de caisse'
         #>charges_accounts: 'Comptes de charge'
         #>choice_complements: 'Chmaps complémentaires "liste de choix"'
         #>client_accounts: 'Comptes clients'
@@ -164,9 +160,6 @@ jpn:
         #>current_financialyear: 'Exercice comptable en cours'
         #>default_currency: 'Devise par défaut'
         #>delays: 'Délais'
-        #>deleted: 'Effacé'
-        #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>deliveries: 'Livraisons'
         #>delivery_lines: 'Lignes de livraison'
         #>delivery_modes: 'Modes de livraison'
@@ -210,11 +203,8 @@ jpn:
         #>operation_natures: 'Types de travail'
         #>operations: 'Travaux'
         #>parameters: 'Paramètres'
-        #>payment_modes: 'Modes de réglement'
-        #>payment_parts: 'Parties de réglement'
-        #>payments: 'Réglements'
-        #>payments_to_embank: '(((PAYMENTS_TO_EMBANK)))'
-        #>payments_to_embank_accounts: '(((PAYMENTS_TO_EMBANK_ACCOUNTS)))'
+        #>payments_to_embank: 'Règlements à encaisser'
+        #>payments_to_embank_accounts: 'Comptes des règlements à encaisser'
         #>prices: 'Prix'
         #>product_components: 'Composants de produit'
         #>productable_products: 'Produits produisibles'
@@ -223,10 +213,9 @@ jpn:
         #>professions: 'Professions'
         #>purchase_order_lines: 'Lignes d''achat'
         #>purchase_orders: 'Achats'
-        #>purchase_payment_modes: '(((PURCHASE_PAYMENT_MODES)))'
-        #>purchase_payment_parts: '(((PURCHASE_PAYMENT_PARTS)))'
-        #>purchase_payments: '(((PURCHASE_PAYMENTS)))'
-        #>purchases_journal: 'Journal d''achats'
+        #>purchase_payment_modes: 'Modes de règlements d''achat'
+        #>purchase_payment_parts: 'Parties de règlements d''achat'
+        #>purchase_payments: 'Règlements d''achat'
         #>roles: 'Rôles'
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
@@ -235,7 +224,7 @@ jpn:
         #>sale_payment_parts: 'Parties de réglement'
         #>sale_payments: 'Réglements'
         #>sales_conditions: 'Conditions Générales de Vente'
-        #>sales_journal: 'Journal de Ventes'
+        #>self_bank_accounts: '(((SELF_BANK_ACCOUNTS)))'
         #>self_cashes: 'Comptes bancaires en propre'
         #>self_contacts: 'Contacts en propre'
         #>sequences: 'Séquences'
@@ -262,6 +251,8 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
+        #>usable_purchase_payments: '(((USABLE_PURCHASE_PAYMENTS)))'
+        #>usable_sale_payments: 'Règlements de vente utilisables'
         #>users: 'Utilisateurs'
       complement:
         #>active: 'Actif'
@@ -326,12 +317,10 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       contact:
-        #>active: 'Actif'
         #>address: 'Adresse'
         #>area: 'Zone postale'
         #>area_id: 'Zone postale'
         #>by_default: 'Par défaut'
-        #>closed_on: 'Annulé le'
         code: 'コード'
         company: '会社'
         company_id: '会社'
@@ -339,10 +328,7 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>default: 'Par défaut'
-        #>deleted: 'Effacé'
         #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>deliveries: 'Livraisons'
         #>email: 'Adresse e-mail'
         #>entity: 'Fiche'
@@ -365,8 +351,6 @@ jpn:
         #>phone: 'Téléphone'
         #>purchase_orders: 'Achats'
         #>sale_orders: 'Ventes'
-        #>started_at: 'Du'
-        #>stopped_at: 'Au'
         #>subscriptions: 'Abonnement'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -375,7 +359,7 @@ jpn:
       currency:
         #>active: 'Actif'
         #>by_default: 'Par défaut'
-        #>cashes: 'Comptes bancaires'
+        #>cashes: 'Comptes de trésorerie'
         code: 'コード'
         comment: 'メモ'
         company: '会社'
@@ -383,7 +367,6 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>entries: 'Écritures'
         #>format: 'Format'
         id: '唯一の番号'
         #>journals: 'Journaux'
@@ -562,8 +545,6 @@ jpn:
         creator_id: '創始者'
         #>default: 'Par défaut'
         #>deleted: 'Supprimé'
-        #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>documents: 'Documents'
         #>family: 'Module'
         #>family_label: 'Module'
@@ -633,7 +614,6 @@ jpn:
         #>direct_links: 'Liens directs'
         #>discount_rate: 'Taux d''escompte'
         #>ean13: 'Ean13'
-        #>employee_id: 'Représentant'
         #>events: 'Évènements'
         #>excise: 'Numéro d''accises'
         #>first_met_on: 'Date de la première rencontre'
@@ -667,7 +647,7 @@ jpn:
         #>proposer_id: 'Parrain'
         #>prospect: 'Prospect'
         #>purchase_orders: 'Achats'
-        #>purchase_payments: '(((PURCHASE_PAYMENTS)))'
+        #>purchase_payments: 'Règlements d''achat'
         #>reduction_rate: 'Taux de réduction'
         #>reflation_submissive: 'Soumis à la relance'
         #>responsible: 'Responsable'
@@ -686,7 +666,7 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>usable_payments: 'Réglements utilisables'
+        #>usable_sale_payments: 'Règlements de vente utilisables'
         #>vat_number: 'Numéro de TVA intra-communautaire'
         #>vat_submissive: 'Soumis à la TVA'
         #>webpass: 'Mot de passe web'
@@ -973,8 +953,6 @@ jpn:
         #>currency: 'Devise'
         #>currency_id: 'Devise'
         #>deleted: 'Effacé'
-        #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>entries: 'Écritures'
         id: '唯一の番号'
         lock_version: '修正の番号'
@@ -1463,6 +1441,7 @@ jpn:
         lock_version: '修正の番号'
         #>moved_on: 'Reçu le'
         number: '番号'
+        #>payee: '(((PAYEE)))'
         #>payment_parts: 'Parties de réglement'
         #>planned_on: 'Réception prévue le'
         #>quantity: 'Quantité'
@@ -1505,30 +1484,30 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       purchase_payment:
-        #>accounted_at: '(((ACCOUNTED_AT)))'
-        #>amount: '(((AMOUNT)))'
-        #>check_number: '(((CHECK_NUMBER)))'
+        #>accounted_at: 'Comptabilisé à'
+        #>amount: 'Montant'
+        #>check_number: 'N°Chèque'
         #>company: 'Société'
         #>company_id: 'Société'
-        #>created_at: '(((CREATED_AT)))'
-        #>created_on: '(((CREATED_ON)))'
+        #>created_at: 'Créé le'
+        #>created_on: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>id: '(((ID)))'
-        #>lock_version: '(((LOCK_VERSION)))'
-        #>mode: '(((MODE)))'
-        #>mode_id: '(((MODE_ID)))'
-        #>number: '(((NUMBER)))'
-        #>paid_on: '(((PAID_ON)))'
-        #>parts: '(((PARTS)))'
-        #>parts_amount: '(((PARTS_AMOUNT)))'
-        #>payee: '(((PAYEE)))'
-        #>payee_id: '(((PAYEE_ID)))'
+        #>id: 'ID'
+        #>lock_version: 'Version'
+        #>mode: 'Mode de règlement'
+        #>mode_id: 'Mode de règlement'
+        #>number: 'Numéro'
+        #>paid_on: 'Payé le'
+        #>parts: 'Parts'
+        #>parts_amount: 'Montant utilisé'
+        #>payee: 'Bénéficiaire'
+        #>payee_id: 'Bénéficiaire'
         #>purchase_orders: 'Achats'
-        #>responsible: '(((RESPONSIBLE)))'
-        #>responsible_id: '(((RESPONSIBLE_ID)))'
-        #>to_bank_on: '(((TO_BANK_ON)))'
-        #>updated_at: '(((UPDATED_AT)))'
+        #>responsible: 'Responsable'
+        #>responsible_id: 'Responsable'
+        #>to_bank_on: 'À encaisser'
+        #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       purchase_payment_mode:
@@ -1536,33 +1515,32 @@ jpn:
         #>cash_id: 'Compte de trésorerie'
         #>company: 'Société'
         #>company_id: 'Société'
-        #>created_at: '(((CREATED_AT)))'
+        #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>id: '(((ID)))'
-        #>lock_version: '(((LOCK_VERSION)))'
-        #>name: '(((NAME)))'
-        #>payments: '(((PAYMENTS)))'
-        #>updated_at: '(((UPDATED_AT)))'
+        #>id: 'ID'
+        #>lock_version: 'Version'
+        #>name: 'Nom'
+        #>payments: 'Règlements'
+        #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
-        #>with_accounting: '(((WITH_ACCOUNTING)))'
+        #>with_accounting: 'Comptabiliser les règlements'
       purchase_payment_part:
-        #>amount: '(((AMOUNT)))'
+        #>amount: 'Montant'
         #>company: 'Société'
         #>company_id: 'Société'
-        #>created_at: '(((CREATED_AT)))'
+        #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
-        #>downpayment: '(((DOWNPAYMENT)))'
-        #>expense: '(((EXPENSE)))'
-        #>expense_id: '(((EXPENSE_ID)))'
-        #>id: '(((ID)))'
-        #>lock_version: '(((LOCK_VERSION)))'
-        #>order_id: '(((ORDER_ID)))'
-        #>payment: '(((PAYMENT)))'
-        #>payment_id: '(((PAYMENT_ID)))'
-        #>updated_at: '(((UPDATED_AT)))'
+        #>downpayment: 'Acompte'
+        #>expense: 'Dépense'
+        #>expense_id: 'Dépense'
+        #>id: 'ID'
+        #>lock_version: 'Version'
+        #>payment: 'Règlement'
+        #>payment_id: 'Règlement'
+        #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       role:
@@ -1624,12 +1602,12 @@ jpn:
         #>nature_id: 'Nature'
         number: '番号'
         #>parts_amount: 'Montant payé'
+        #>payer: 'Payeur'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
         #>payment_parts: 'Parties de réglement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
-        #>sale: 'Vente'
         #>state: 'État'
         #>stock_moves: 'Mouvements de stock'
         #>subject: 'Objet'
@@ -1705,16 +1683,15 @@ jpn:
         name: '名前'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
+        #>payment_mode_complement: '(((PAYMENT_MODE_COMPLEMENT)))'
+        #>payment_mode_id: '(((PAYMENT_MODE_ID)))'
         #>payment_type: 'Type de paiement'
         #>sale_orders: 'Ventes'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
       sale_payment:
-        #>account: 'Compte associé'
-        #>account_id: 'Compte associé'
         #>account_number: 'Numéro de compte'
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant'
         #>bank: 'Banque'
@@ -1725,26 +1702,20 @@ jpn:
         #>created_on: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>direction: 'Type'
-        #>downpayment: 'Acompte'
         #>embanker: 'Responsable'
         #>embanker_id: 'Responsable'
         #>embankment: 'Encaissement'
         #>embankment_id: 'Encaissement'
-        #>entity: 'Client'
-        #>entity_id: 'Client'
         id: '唯一の番号'
         lock_version: '修正の番号'
         #>mode: 'Mode de paiement'
         #>mode_id: 'Mode de paiement'
         number: '番号'
-        #>orders: 'Ventes'
         #>paid_on: 'Réglé le'
         #>parts: 'Parties de réglement'
         #>parts_amount: 'Montant utilisé'
-        #>payer: '(((PAYER)))'
-        #>payer_id: '(((PAYER_ID)))'
-        #>purchase_orders: 'Achats'
+        #>payer: 'Payeur'
+        #>payer_id: 'Payeur'
         #>receipt: 'Reçu électronique'
         #>received: 'Reçu'
         #>sale_orders: 'Ventes'
@@ -1767,14 +1738,11 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>direction: 'Type'
-        #>embankable_payments: '(((EMBANKABLE_PAYMENTS)))'
+        #>embankable_payments: 'Règlements encaissables'
         #>entities: 'Personnes'
         id: '唯一の番号'
         lock_version: '修正の番号'
         name: '名前'
-        #>nature: 'Nature'
-        #>nature_label: 'Nature'
         #>payments: 'Réglements'
         #>published: 'Publié'
         #>updated_at: 'Mis à jour le'
@@ -1798,7 +1766,6 @@ jpn:
         #>invoice: 'Facture'
         #>invoice_id: 'Facture'
         lock_version: '修正の番号'
-        #>order_id: 'Vente'
         #>payment: 'Réglement'
         #>payment_id: 'Réglement'
         #>payment_way: 'Moyen de paiement'
@@ -2031,8 +1998,6 @@ jpn:
         creator: '創始者'
         creator_id: '創始者'
         #>deleted: 'Effacé'
-        #>deleted_at: 'Supprimé le'
-        #>deleter_id: 'Supprimeur'
         #>description: 'Description'
         #>group_name: 'Groupe'
         id: '唯一の番号'
@@ -2136,7 +2101,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       transfer:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant'
         comment: 'メモ'
@@ -2150,6 +2114,7 @@ jpn:
         #>label: 'Libellé'
         lock_version: '修正の番号'
         #>parts_amount: 'Montant payé'
+        #>payer: 'Payeur'
         #>payment_parts: 'Parties de réglement'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Fini le'
@@ -2210,7 +2175,6 @@ jpn:
         #>credits: 'Création d''avoirs'
         #>deleted: 'Effacé'
         #>deleted_at: 'Supprimé à'
-        #>deleter_id: 'Supprimeur'
         #>departed_on: 'Parti le'
         #>department: 'Département'
         #>department_id: 'Département'
@@ -2250,8 +2214,15 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
     default_attributes:
+      #>company: 'Société'
+      #>company_id: 'Société'
+      #>created_at: 'Créé le'
       #>creator: 'Créateur'
       #>creator_id: 'Créateur'
+      #>id: 'ID'
+      #>lock_version: 'Version'
+      #>position: 'Position'
+      #>updated_at: 'Mis à jour le'
       #>updater: 'Modificateur'
       #>updater_id: 'Modificateur'
     errors:
@@ -2396,9 +2367,9 @@ jpn:
       #>profession: 'Profession'
       #>purchase_order: 'Achat'
       #>purchase_order_line: 'Ligne d''achat'
-      #>purchase_payment: '(((PURCHASE_PAYMENT)))'
-      #>purchase_payment_mode: '(((PURCHASE_PAYMENT_MODE)))'
-      #>purchase_payment_part: '(((PURCHASE_PAYMENT_PART)))'
+      #>purchase_payment: 'Règlement d''achat'
+      #>purchase_payment_mode: 'Mode de règlement d''achat'
+      #>purchase_payment_part: 'Partie de règlement d''achat'
       #>role: 'Rôle'
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
@@ -2476,9 +2447,9 @@ jpn:
       #>profession: 'Professions'
       #>purchase_order: 'Achats'
       #>purchase_order_line: 'Lignes d''achat'
-      #>purchase_payment: '(((PURCHASE_PAYMENT)))'
-      #>purchase_payment_mode: '(((PURCHASE_PAYMENT_MODE)))'
-      #>purchase_payment_part: '(((PURCHASE_PAYMENT_PART)))'
+      #>purchase_payment: 'Règlements d''achat'
+      #>purchase_payment_mode: 'Modes de règlement d''achat'
+      #>purchase_payment_part: 'Parties de règlement d''achat'
       #>role: 'Rôles'
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
