--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -964,6 +964,8 @@ spa:
       journal_entry:
         #>account: 'Compte'
         #>account_id: 'Compte'
+        #>bank_statement: 'Relevés de compte bancaire'
+        #>bank_statement_id: 'Relevé de compte bancaire'
         #>closed: 'Cloturée'
         #>comment: 'Commentaire'
         company: 'Compañía'
@@ -999,6 +1001,7 @@ spa:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       journal_record:
+        #>always_draft: '(((ALWAYS_DRAFT)))'
         #>closed: 'Fermé'
         company: 'Compañía'
         company_id: 'Compañía'
@@ -1013,6 +1016,7 @@ spa:
         #>currency_id: 'Devise'
         #>currency_rate: 'Taux de change'
         #>debit: 'Débit'
+        #>draft: '(((DRAFT)))'
         #>entries: 'Écritures'
         #>financialyear: 'Exercices'
         #>id: 'ID'
@@ -1492,6 +1496,7 @@ spa:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode de règlement'
         #>mode_id: 'Mode de règlement'
@@ -1504,7 +1509,7 @@ spa:
         #>purchase_orders: 'Achats'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
-        #>to_bank_on: 'À encaisser'
+        #>to_bank_on: 'À décaisser le'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -1538,6 +1543,7 @@ spa:
         #>lock_version: 'Version'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
+        #>payment_way: 'Mode de règlement'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -1705,6 +1711,8 @@ spa:
         #>embankment: 'Encaissement'
         #>embankment_id: 'Encaissement'
         #>id: 'ID'
+        #>journal_record: 'Pièces comptables'
+        #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode de paiement'
         #>mode_id: 'Mode de paiement'
@@ -2259,6 +2267,8 @@ spa:
           #>too_long: '{{field}} est trop long ({{length}} caractères)'
         delivery_line:
           #>greater_than_undelivered_quantity: 'La quantité de produit {{product}} à livrer dépasse la quantité non livrée ({{maximum}}{{unit}})'
+        embankment:
+          #>must_be_a_bank_account: '{{field}} doit être un compte bancaire et non une caisse'
         entity:
           #>missing_title: '{{attribute}} doit contenir la dénomination sociale "{{title}}"'
           #>nature_do_not_allow_a_first_name: 'Le type "{{nature}}" sélectionné ne permet de renseigner un prénom'
