--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -122,9 +122,9 @@ eng:
         #>title: 'Modification du mode de livraison : {{name}}'
       delivery_modes:
         #>title: 'Modes de livraison'
-      _delivery_update:
       delivery_update:
         #>title: 'Modification de la livraison'
+      _delivery_update:
       embankment:
         #>amount: 'Montant total'
         #>check_number: 'Nombre de chèques'
@@ -364,13 +364,22 @@ eng:
           #>other: '{{count}} achats'
           #>zero: 'Aucun achat'
         #>title: 'Achats'
+      purchase_payment:
+        #>purchase_orders: 'Ventes payées grâce à ce règlement'
+        #>purchase_payment_update: 'Modifier le règlement'
+        #>title: 'Règlement d''achat n°{{number}} pour {{payee}}'
       purchase_payment_create:
         #>title: 'Ajout d''un règlement d''achat'
       _purchase_payment_form:
         #>embankable: 'Complément d''information'
         #>title: 'Renseignez les conditions du règlement'
       purchase_payment_mode_create:
-        #>title: 'Ajouter un nouveau mode de règlement d''achat'
+        #>title: 'Ajouter un mode de règlement d''achat'
+      _purchase_payment_mode_form:
+        #>accountancy: 'Comptabilisation'
+        #>general: 'Description générale'
+      purchase_payment_mode_update:
+        #>title: 'Modifier un mode de règlement d''achat'
       purchase_payment_part_create:
         #>title: 'Régler l''achat avec un règlement'
       purchase_payments:
@@ -418,13 +427,13 @@ eng:
         #>discount: 'Remise (en %)'
         #>give_discount: 'Octroyer une remise'
         #>infos: 'Choisissez le produit et la quantité'
-      _sale_order_line_informations:
-        #>no_tracking: 'Aucun lot'
-        #>tracking: 'Lot '
       sale_order_line_informations:
         #>contact: 'à l''adresse'
         #>from_date: 'Du '
         #>to_date: 'Au '
+      _sale_order_line_informations:
+        #>no_tracking: 'Aucun lot'
+        #>tracking: 'Lot '
       _sale_order_line_row_form:
         #>discount: 'Réduction (en %)'
         #>from: 'Du numéro'
@@ -649,13 +658,13 @@ eng:
         #>title: 'Transport du {{value}}'
       transport_create:
         #>title: 'Ajout d''un nouveau transport'
-      transport_deliveries:
-        #>title: 'Livraisons du transport'
       _transport_deliveries:
         #>add: 'Ajouter la livraison au transport'
         #>add_delivery: 'Ajouter une livraison'
         #>back: 'Valider et revenir à la liste des transports'
         #>delivery: 'Livraison'
+      transport_deliveries:
+        #>title: 'Livraisons du transport'
       _transport_form:
         #>info: 'Renseignez les informations du transport'
       transport_update:
