--- a/config/locales/spa/general.yml
+++ b/config/locales/spa/general.yml
@@ -121,6 +121,7 @@ spa:
     #>up: 'Monter'
     #>update: 'Modifier'
     #>validate: 'Valider'
+    #>view: 'Affichage'
     #>y: 'oui'
   models:
     account:
@@ -376,7 +377,8 @@ spa:
         #>sales: 'Ventes'
         #>various: 'Opérations diverses'
     journal_entry:
-      #>error_amount_rate: 'Le taux de conversion n''existe pas.'
+    journal_record:
+      #>record_cancel: 'Contre-passation de la pièce {{number}} : {{name}}'
     listing_node:
       #>add_filter: ' Ajouter un filtre '
       #>all_columns: '-- Toutes les colonnes --'
@@ -485,6 +487,7 @@ spa:
     sale_order_nature:
     sale_payment:
       #>label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{payer}}'
+      #>to_accountancy: '[{{number}}] {{detail}}'
     sequence:
       periods:
         #>cweek: 'Semaine'
